--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
         <button id="save-btn" onclick="save()">SAVE</button>
         <p id="save-el">Previous entries: </p>
+        <h3>roll the dice:</h3>
+        <h4 id="randomDice">1</h4>
+        <button id="roll" onclick="dice()">roll</button>
         <script src="index.js">
             nnerText
         </script>
