--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>oussama</title>
         <link rel="stylesheet" href="index.css">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3045363395159177"
+     crossorigin="anonymous"></script>
     </head>
     <body>
         <h1>count:</h1>
